<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CheckoutActivity">

    <TextView
        android:id="@+id/checkoutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#00FF00"
        android:padding="10dp"
        android:text="@string/checkout_header"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/checkoutBackArrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/basketHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/basketHeader"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/totalPrice"
        app:layout_constraintStart_toStartOf="@+id/checkoutHeader"
        app:layout_constraintTop_toBottomOf="@+id/checkoutHeader" />

    <TextView
        android:id="@+id/discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/discount"
        app:layout_constraintStart_toStartOf="@+id/checkoutHeader"
        app:layout_constraintTop_toBottomOf="@+id/totalPrice" />

    <TextView
        android:id="@+id/resultPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/resultPrice"
        app:layout_constraintStart_toStartOf="@+id/checkoutHeader"
        app:layout_constraintTop_toBottomOf="@+id/discount" />

    <TextView
        android:id="@+id/totalPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/totalPriceValue"
        app:layout_constraintEnd_toEndOf="@+id/checkoutHeader"
        app:layout_constraintTop_toBottomOf="@+id/checkoutHeader" />

    <TextView
        android:id="@+id/discountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discountValue"
        app:layout_constraintBottom_toBottomOf="@+id/discount"
        app:layout_constraintEnd_toEndOf="@+id/checkoutHeader"
        app:layout_constraintTop_toTopOf="@+id/discount" />

    <TextView
        android:id="@+id/resultPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultPriceValue"
        app:layout_constraintEnd_toEndOf="@+id/checkoutHeader"
        app:layout_constraintTop_toTopOf="@+id/resultPrice" />

    <Button
        android:id="@+id/checkoutToBasketBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:background="#00FF00"
        android:text="Корзина"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkoutPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/checkoutPay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:background="#00FF00"
        android:text="Оплатить"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="Имя"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resultPrice"
        app:layout_constraintTop_toBottomOf="@+id/resultPrice" />

    <EditText
        android:id="@+id/userName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="Фамилия"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resultPrice"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/userName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="Отчество"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resultPrice"
        app:layout_constraintTop_toBottomOf="@+id/userName2" />

    <EditText
        android:id="@+id/checkoutPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="+7... или 8...."
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resultPrice"
        app:layout_constraintTop_toBottomOf="@+id/userName3" />
</androidx.constraintlayout.widget.ConstraintLayout>